tests/NormalTests/paczka1/small_fuzzy/62913994.err
Error in line 2: 9ndR6 A383 97,9
Error in line 9: A149 A149 34,7
Error in line 8: 9ndR6 A149 80,4
